Switch the CGI servlet to the standard logging mechanism and remove support for the debug attribute. Align 6.0.x with 7.0.x
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1756430 13f79535-47bb-0310-9956-ffa450edef68